--- a/Mission Demolition/Assets/_Scripts/README
+++ b/Mission Demolition/Assets/_Scripts/README
@@ -2,4 +2,4 @@ COOL AND MEANINGFUL
 
 1) Instead of a simple sphere projectile, I have created a bullet projectile.
 
-2) 
+2) I have added a welcome screen to welcome the user and ensure they are ready for playing
